--- a/src/webui/src/styles.scss
+++ b/src/webui/src/styles.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~material-design-icons-iconfont/dist/material-design-icons.css";
+@import "~@swimlane/ngx-datatable/index.css";
+@import "~@swimlane/ngx-datatable/themes/bootstrap.css";
+@import "~@swimlane/ngx-datatable/assets/icons.css";
+
 
 body {
   margin: 0;
